<resources>
    <string name="app_name">T-907-ORIGIN</string>
    <string name="btn_mtd">方式</string>
    <string name="btn_range">范围</string>
    <string name="btn_adj">调节</string>
    <string name="btn_opt">操作</string>
    <string name="btn_file">文档</string>
    <string name="btn_setting">设置</string>
    <string name="btn_test">测试</string>
    <string name="btn_tdr">低压脉冲</string>
    <string name="btn_icm">脉冲电流-冲闪</string>
    <string name="btn_icm_decay">脉冲电流-直闪</string>
    <string name="btn_sim">多次脉冲</string>
    <string name="btn_decay">DECAY</string>
    <string name="btn_250m">250m</string>
    <string name="btn_500m">500m</string>
    <string name="btn_1km">1km</string>
    <string name="btn_2km">2km</string>
    <string name="btn_4km">4km</string>
    <string name="btn_8km">8km</string>
    <string name="btn_16km">16km</string>
    <string name="btn_32km">32km</string>
    <string name="btn_64km">64km</string>
    <string name="btn_250m_to_ft">820ft</string>
    <string name="btn_500m_to_ft">1640ft</string>
    <string name="btn_1km_to_yingli">3280ft</string>
    <string name="btn_2km_to_yingli">1mi</string>
    <string name="btn_4km_to_yingli">2mi</string>
    <string name="btn_8km_to_yingli">4mi</string>
    <string name="btn_16km_to_yingli">9mi</string>
    <string name="btn_32km_to_yingli">19mi</string>
    <string name="btn_64km_to_yingli">39mi</string>
    <string name="btn_gain_plus">增益+</string>
    <string name="btn_gain_minus">增益-</string>
    <string name="btn_balance_plus">平衡+</string>
    <string name="btn_balance_minus">平衡-</string>
    <string name="btn_delay_plus">延时+</string>
    <string name="btn_delay_minus">延时-</string>
    <string name="btn_vel_plus">波速+</string>
    <string name="btn_vel_minus">波速-</string>
    <string name="btn_zoom_in">放大</string>
    <string name="btn_zoom_out">缩小</string>
    <string name="btn_res">还原</string>
    <string name="btn_memory">记忆</string>
    <string name="btn_compare">比较</string>
    <string name="btn_save">保存</string>
    <string name="btn_browse">浏览</string>
    <string name="btn_display">显示</string>
    <string name="btn_search">查找</string>
    <string name="btn_dele">删除</string>
    <string name="btn_zero">光标零点</string>
    <string name="btn_lang">语言切换</string>
    <drawable name="clr_normal">#FF303F9F</drawable>
    <drawable name="clr_pressed">#9501f9</drawable>
    <string name="title_activity_base">BaseActivity</string>
    <string name="fault_distance"></string>
    <string name="btn_cursor">光标</string>
    <string name="tv_method">方式:</string>
    <string name="tv_gain">增益: </string>
    <string name="tv_vel">波速: </string>
    <string name="tv_range">范围:</string>
    <string name="btn_cancel">取消测试</string>
    <string name="wait_trigger">等待触发…</string>
    <string name="tv_balance">平衡:</string>
    <string name="receive_data">正在接收数据…</string>
    <string name="connecting_wifi">等待WiFi连接…</string>
    <string name="connecting_hw">等待设备连接…</string>
    <string name="You_have_no_memory_data_can_not_compare">你还没有记忆数据，无法比较</string>
    <string name="You_can_not_compare">方式或范围不同，无法比较</string>
    <string name="btn_wave_previous">波形上翻</string>
    <string name="btn_wave_next">波形下翻</string>
    <string name="tv_delay">延时:</string>
    <string name="tv_density">比例:</string>
    <string name="tv_testdate">"测试日期: "</string>
    <string name="tv_testtime">"测试时间: "</string>
    <string name="tv_testmode">"测试方式: "</string>
    <string name="tv_testrange">"测试范围: "</string>
    <string name="tv_testphase">"测试相别: "</string>
    <string name="tv_tester">测试人员:</string>
    <string name="tv_testlocation">"测试地点: "</string>
    <string name="tv_testline">"测试线路: "</string>
    <string name="btn_Confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="phaseA">A相</string>
    <string name="phaseB">B相</string>
    <string name="phaseC">C相</string>
    <string name="btn_view">查看</string>
    <string name="title_date">日期</string>
    <string name="title_time">时间</string>
    <string name="title_mode">方式</string>
    <string name="title_range">范围</string>
    <string name="oneSpace">&#160;</string>
    <string name="twoSpace">&#160;&#160;</string>
    <string name="btn_inductor_plus">电感+</string>
    <string name="btn_inductor_minus">电感-</string>
    <string name="tv_inductor">电感:</string>
    <string name="gain_too_high">增益过大</string>
    <string name="gain_too_low">增益过小</string>
    <string name="break_down">击穿！</string>
    <string name="not_break_down">不击穿！</string>
    <string name="auto_fault_distance">自动测距：</string>
    <string name="cursor_zero_set_success">光标零点设置成功！</string>
    <string name="connect_success">T-907连接成功！</string>
    <string name="communication_failed">通信失败，请检查网络后重试</string>

    <!-- 新的资源 -->
    <string name="cable_vop">波速度 : </string>
    <string name="vop">波速度 : </string>
    <string name="cable_length">长度 : </string>
    <string name="tv_cable_id">线缆编号 : </string>
    <string name="test_lead">测试缆 : </string>
    <string name="length">长度 : </string>
    <string name="unit">单位 : </string>
    <string name="records">记录</string>
    <string name="vop_plus">波速度+</string>
    <string name="vop_min">波速度-</string>
    <string name="cable_id">线缆编号 : </string>
    <string name="btn_both">Both</string>
    <string name="fault_location_text">故障位置 : </string>
    <string name="phase_text">相位 : </string>
    <string name="operator"> 测试人员: </string>
    <string name="select_change">选择您需要的语言</string>
    <string name="no_records">暂无记录</string>
    <string name="zh">中文</string>
    <string name="en">英文</string>
    <string name="date_text">日期 : </string>
    <string name="mode_text">方式 : </string>
    <string name="range_text">范围 : </string>
    <string name="test_site_text">测试地点 : </string>
    <string name="main_notice">默认测试范围是%1$s。 输入电缆长度，可自动确定范围。设置参数后选择测试方式</string>
    <string name="save_success">保存成功</string>
    <string name="distance">距离</string>
    <string name="wave_number">波形序号 : </string>
    <string name="wave_one">波形1</string>
    <string name="wave_two">波形2</string>
    <string name="wave_three">波形3</string>
    <string name="wave_four">波形4</string>
    <string name="wave_five">波形5</string>
    <string name="wave_six">波形6</string>
    <string name="wave_seven">波形7</string>
    <string name="wave_eight">波形8</string>
    <string name="mi">m</string>
    <string name="mius">m/us</string>
    <string name="ns">ns</string>
    <string name="ftus">ft/us</string>
    <string name="ft">ft</string>
    <string name="km">km</string>
    <string name="yingli">mi</string>

    <string name="update_version">有新版本,点击立即更新</string>
    <string name="no_load_url">没有可用于下载的地址</string>
    <string name="downloading">正在下载...</string>
    <string name="check_update">正在检测新版本信息...</string>
    <string name="has_new_version">当前已是最新版本</string>
    <string name="disconnect">连接异常</string>
    <string name="ask_cancel">退出前请点击取消测试按钮。</string>
    <string name="update_now">现在更新</string>
    <string name="update_later">稍后更新</string>
    <string name="maxpulsewidth">脉宽最大值为7000。</string>
    <string name="test_on_no_connect">请等待设备连接成功后操作！</string>
</resources>
