<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_5"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_250m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/btn_250m"
            android:textColor="@color/tv_text_selector"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_500m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/btn_500m"
            android:textColor="@color/tv_text_selector"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_1km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/btn_1km"
            android:textColor="@color/tv_text_selector"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_2km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/btn_2km"

            android:textColor="@color/tv_text_selector"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_4km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/btn_4km"
            android:textColor="@color/tv_text_selector"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_8km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/btn_8km"
            android:textColor="@color/tv_text_selector"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_16km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/btn_16km"
            android:textColor="@color/tv_text_selector"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_32km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/btn_32km"
            android:textColor="@color/tv_text_selector"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_64km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/btn_64km"
            android:textColor="@color/tv_text_selector"
            android:textSize="@dimen/sp_10" />


    </LinearLayout>

    <ImageView
        android:id="@+id/iv_range_close"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:layout_gravity="right"
        android:paddingTop="@dimen/dp_2"
        android:src="@drawable/bg_dialog_close" />
</LinearLayout>