<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_language_change">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_23"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/update_version"
            android:textColor="@color/blue_0FF6FF"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_update_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/sp_15"
                android:background="@drawable/shape_border_off6ff"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_12"
                android:paddingTop="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_12"
                android:text="@string/update_now"
                android:textColor="@color/blue_0FF6FF"
                android:textSize="@dimen/sp_14"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_no_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:background="@drawable/shape_solide_0ff6ff"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_12"
                android:paddingTop="12dp"
                android:paddingRight="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_12"
                android:text="@string/update_later"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
