<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#00000000"
    android:orientation="vertical">

    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_language_change">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_alignParentRight="true"
            android:src="@drawable/bg_dialog_close_big" />

        <androidx.percentlayout.widget.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_marginBottomPercent="12%"
            app:layout_marginLeftPercent="14%"
            app:layout_marginRightPercent="14%"
            app:layout_marginTopPercent="12%">


            <LinearLayout
                android:id="@+id/rl_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_change"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/blue_0FF6FF"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_border_blue"
                        android:paddingLeft="@dimen/dp_15"
                        android:paddingRight="@dimen/dp_15"
                        android:id="@+id/tv_zh"
                        android:paddingTop="@dimen/dp_8"
                        android:layout_marginRight="@dimen/dp_25"
                        android:textColor="@color/blue_0FF6FF"
                        android:paddingBottom="@dimen/dp_8"
                        android:text="@string/zh"/>
                    <TextView
                        android:id="@+id/tv_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_border_blue"
                        android:paddingLeft="@dimen/dp_15"
                        android:paddingRight="@dimen/dp_15"
                        android:layout_marginLeft="@dimen/dp_25"
                        android:paddingTop="@dimen/dp_8"
                        android:textColor="@color/blue_0FF6FF"
                        android:paddingBottom="@dimen/dp_8"
                        android:text="@string/en"/>
                </LinearLayout>



            </LinearLayout>


        </androidx.percentlayout.widget.PercentRelativeLayout>

    </androidx.percentlayout.widget.PercentRelativeLayout>

</androidx.percentlayout.widget.PercentRelativeLayout>